Design, human-readable next EPG in AppBar, fixed AppBar hiding on quickMenu exit

--- a/app/css/appbar.css
+++ b/app/css/appbar.css
@@ -1,4 +1,4 @@
-#nav {
+#appBar {
     position: fixed;
     z-index: 5;
     color: white;
@@ -6,14 +6,14 @@
     left: 0;
     right: 0;
     padding: 16px 16px;
-    background: rgba(96, 125, 139, .7);
+    background: rgba(96, 125, 139, .95);
     box-shadow: 50px 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     overflow: hidden;
     font-size: 24px;
     clear: both;
 }
 
-#nav > * {
+#appBar > * {
     display: inline-block;
     overflow: hidden;
     vertical-align: middle;
@@ -60,7 +60,6 @@
 
 #clockContainer {
     float: right;
-    font-weight: bold;
 }
 
 .bold {
